--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
+    "emailjs-com": "^2.6.4",
     "framer-motion": "^2.9.4",
     "history": "^5.0.0",
     "react": "^17.0.1",
