--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -6,7 +6,7 @@
     "image": "./images/chatapp.png",
     "class": "portfolio__item__1",
     "description": "Built a social media app",
-    "techs": "MERGN Stack (MongoDB - Express, React - GraphQL - Node)",
+    "tech": "MERGN Stack",
     "lock": true
   },
   {
@@ -15,8 +15,8 @@
     "demo-link": "http://meetthemeteo.netlify.app/",
     "image": "./images/react.webp",
     "class": "portfolio__item__2",
-    "description": "Built an open source developers portfolio",
-    "techs": "JavaScript - React - Open weather map API",
+    "description": "Built a live weather app",
+    "tech": "React + Open Weather Map Api",
     "lock": true
   },
 
@@ -27,7 +27,7 @@
     "image": "./images/anisfitness.png",
     "class": "portfolio__item__3",
     "description": "Built a club website & member management system",
-    "techs": "Python - Django",
+    "tech": "Python + Django",
     "lock": true
   },
   {
@@ -37,7 +37,7 @@
     "image": "./images/chakra.png",
     "class": "portfolio__item__3",
     "description": "Built an open source developers portfolio",
-    "techs": "JavaScript - React - Chakra UI",
+    "tech": "React + Chakra UI",
     "repo": "https://github.com/YassineTk/React-Chakra-Portfolio",
     "lock": false
   }
